--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "dewey",
   "version": "0.0.4",
-  "description": "Wrapping up Async/Await",
-  "main": "index.js",
+  "description": "Make lerna.js work for serverless",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -15,5 +15,20 @@
   "bugs": {
     "url": "https://github.com/samrocksc/dewey/issues"
   },
-  "homepage": "https://github.com/samrocksc/dewey#readme"
+  "homepage": "https://github.com/samrocksc/dewey#readme",
+  "dependencies": {
+    "fs-extra": "^9.0.0"
+  },
+  "devDependencies": {
+    "@types/fs-extra": "^8.1.0",
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.11.0",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-base": "^14.1.0",
+    "eslint-plugin-import": "^2.20.2",
+    "prettier": "^2.0.2",
+    "typescript": "^3.8.3"
+  }
 }
