--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Make lerna.js work for serverless",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsc -b && npm run generate:docs",
+    "generate:docs": "typedoc --plugin typedoc-plugin-markdown --theme markdown"
   },
   "repository": {
     "type": "git",
@@ -29,6 +31,8 @@
     "eslint-config-airbnb-base": "^14.1.0",
     "eslint-plugin-import": "^2.20.2",
     "prettier": "^2.0.2",
+    "typedoc": "^0.17.3",
+    "typedoc-plugin-markdown": "^2.2.17",
     "typescript": "^3.8.3"
   }
 }
