--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,7 +25,6 @@
   "typedocOptions": {
     "mode": "modules",
     "out": "docs",
-    "theme": "minimal",
-    "plugin": "typedoc-plugin-markdown"
+    "theme": "minimal"
   }
 }
