--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -b && npm run generate:docs",
-    "generate:docs": "typedoc"
+    "generate:docs": "typedoc --plugin typedoc-plugin-markdown --theme markdown"
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "eslint-plugin-import": "^2.20.2",
     "prettier": "^2.0.2",
     "typedoc": "^0.17.3",
+    "typedoc-plugin-markdown": "^2.2.17",
     "typescript": "^3.8.3"
   }
 }
