--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "tsc -b && npm run generate:docs",
-    "generate:docs": "typedoc"
+    "generate:docs": "typedoc && touch docs/.nojekyll"
   },
   "repository": {
     "type": "git",
