--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-import": "^2.20.2",
     "nodemon": "^2.0.2",
     "prettier": "^2.0.2",
+    "ts-node": "^8.8.2",
     "typedoc": "^0.17.3",
     "typescript": "^3.8.3"
   }
